--- a/public/references.bib
+++ b/public/references.bib
@@ -1,361 +1,49 @@
-﻿@article{RN4,
-   author = {Bai, L. and Li, X. and Yang, Y. and Zhao, R. and White, E. Z. and Danaher, A. and Bowen, N. J. and Hinton, C. V. and Cook, N. and Li, D. and Wu, A. Y. and Qui, M. and Du, Y. and Fu, H. and Kucuk, O. and Wu, D.},
-   title = {Bromocriptine monotherapy overcomes prostate cancer chemoresistance in preclinical models},
-   journal = {Transl Oncol},
-   volume = {34},
-   pages = {101707},
-   note = {1936-5233
-Bai, Lijuan
-Li, Xin
-Yang, Yang
-Zhao, Rui
-White, Elshaddai Z
-Danaher, Alira
-Bowen, Nathan J
-Hinton, Cimona V
-Cook, Nicholas
-Li, Dehong
-Wu, Alyssa Y
-Qui, Min
-Du, Yuhong
-Fu, Haian
-Kucuk, Omer
-Wu, Daqing
-Journal Article
-United States
-2023/06/05
-Transl Oncol. 2023 Aug;34:101707. doi: 10.1016/j.tranon.2023.101707. Epub 2023 Jun 2.},
-   abstract = {Chemoresistance is a major obstacle in the clinical management of metastatic, castration-resistant prostate cancer (PCa). It is imperative to develop novel strategies to overcome chemoresistance and improve clinical outcomes in patients who have failed chemotherapy. Using a two-tier phenotypic screening platform, we identified bromocriptine mesylate as a potent and selective inhibitor of chemoresistant PCa cells. Bromocriptine effectively induced cell cycle arrest and activated apoptosis in chemoresistant PCa cells but not in chemoresponsive PCa cells. RNA-seq analyses revealed that bromocriptine affected a subset of genes implicated in the regulation of the cell cycle, DNA repair, and cell death. Interestingly, approximately one-third (50/157) of the differentially expressed genes affected by bromocriptine overlapped with known p53-p21- retinoblastoma protein (RB) target genes. At the protein level, bromocriptine increased the expression of dopamine D2 receptor (DRD2) and affected several classical and non-classical dopamine receptor signal pathways in chemoresistant PCa cells, including adenosine monophosphate-activated protein kinase (AMPK), p38 mitogen-activated protein kinase (p38 MAPK), nuclear factor kappa B  (NF-κB), enhancer of zeste homolog 2 (EZH2), and survivin. As a monotherapy, bromocriptine treatment at 15 mg/kg, three times per week, via the intraperitoneal route significantly inhibited the skeletal growth of chemoresistant C4-2B-TaxR xenografts in athymic nude mice. In summary, these results provided the first preclinical evidence that bromocriptine is a selective and effective inhibitor of chemoresistant PCa. Due to its favorable clinical safety profiles, bromocriptine could be rapidly tested in PCa patients and repurposed as a novel subtype-specific treatment to overcome chemoresistance.},
-   keywords = {Bone metastasis
-Bromocriptine
-Chemoresistance
-Drug repurposing
-Prostate cancer},
-   ISSN = {1936-5233 (Print)
-1936-5233},
-   DOI = {10.1016/j.tranon.2023.101707},
-   year = {2023},
-   type = {Journal Article}
+﻿@article{cao2025extracellular,
+  image={/images/featuredImages/Gut_1.png},
+  title={Extracellular vesicle-induced lipid dysregulation drives liver premetastatic niche formation in colorectal cancer},
+  author={Cao, Jiangjun and Qin, Siyuan and Li, Bowen and Zhang, Zhe and Miao, Peng and Yan, Han and Duan, Jiufei and He, Bo and He, Kai and Peng, Peilan and others},
+  journal={Gut},
+  year={2025},
+  publisher={BMJ Publishing Group},
+  abstract={Background:Liver metastasis is a major cause of mortality in patients with colorectal cancer (CRC). Understanding how CRC cells influence the formation of hepatic premetastatic niches (PMNs) is crucial for developing targeted therapies. Objective:We aimed to elucidate the underlying mechanism by which extracellular vesicles (EVs) derived from CRC cells with high liver metastatic capacity facilitate the formation of hepatic PMNs. Design:CRC cells with high metastatic potential were selected using a liver metastasis mouse model through two rounds of splenic injections. The role of EVs secreted by CRC cells in the liver was investigated using lipidomics and single-cell sequencing. Clinical significance was evaluated by tumour samples from patients with CRC. Results:EVs derived from highly metastatic CRC cells facilitate the formation of PMNs by driving hepatic lipid accumulation. The upregulation of fatty acid (FA) synthesis in CRC cells leads to significantly increased levels of prosteatogenic lipids in EVs, promoting hepatic lipid accumulation. Inhibition of hepatic lipid accumulation reduces the prometastatic capability of EVs secreted by highly metastatic CRC cells. Moreover, EVs are primarily taken up by Kupffer cells, where they induce tumour necrosis factor alpha secretion, further driving hepatic lipid accumulation. In patients with late-stage CRC, CRC cells exhibit elevated FA synthesis, which contributes to hepatic lipid accumulation. Notably, suppressing FA synthesis in CRC patient-derived organoids alleviates hepatic lipid accumulation and reduces liver metastasis. Conclusion: Inhibition of FA synthesis in CRC cells with high metastatic potential reduces hepatic lipid accumulation and subsequent metastasis, highlighting a new strategy for preventing liver metastasis.},
+  doi={10.1136/gutjnl-2025-334851}
 }
 
-@article{RN1,
-   author = {Joels, M. and Fernandez, G. and Roozendaal, B.},
-   title = {Stress and emotional memory: a matter of timing},
-   journal = {Trends Cogn Sci},
-   volume = {15},
-   number = {6},
-   pages = {280-8},
-   note = {Joels, Marian
-Fernandez, Guillen
-Roozendaal, Benno
-eng
-Review
-England
-2011/05/17
-Trends Cogn Sci. 2011 Jun;15(6):280-8. doi: 10.1016/j.tics.2011.04.004. Epub 2011 May 14.},
-   abstract = {Stressful events activate the amygdala and a network of associated brain regions. Studies in both humans and rodents indicate that noradrenaline has a prominent role in this activation. Noradrenaline induces a hypervigilant state that helps to remember the event. This mnemonic effect is enhanced when the situation is so stressful that substantial amounts of corticosteroids are released and reach the amygdala. The combination of the two hormones leads to optimal strengthening of contacts and thus memory. Yet, rises in corticosteroid levels that are not precisely synchronized with noradrenaline release do not act synergistically but rather prevent or suppress the effect of noradrenaline. This dynamic interaction illustrates the adaptive and potentially protective capacity of corticosteroids regarding traumatic memories.},
-   keywords = {Adrenal Cortex Hormones/metabolism
-Animals
-*Brain/anatomy & histology/metabolism
-Emotions/*physiology
-Humans
-Memory/*physiology
-Norepinephrine/metabolism
-Receptors, AMPA
-Signal Transduction
-*Stress, Psychological/pathology/physiopathology},
-   ISSN = {1879-307X (Electronic)
-1364-6613 (Linking)},
-   DOI = {10.1016/j.tics.2011.04.004},
-   url = {https://www.ncbi.nlm.nih.gov/pubmed/21571575},
-   year = {2011},
-   type = {Journal Article}
+@article{wang2025self,
+  image={/images/featuredImages/biomaterials.jpg}
+  title={Self-assembly driven nano-salinomycin for high-efficiency cancer immunotherapy by reticulum stress mediated stemness suppression},
+  author={Wang, Longqin and Cheng, Wenting and Qin, Siyuan and Tian, Hailong and Liu, Guowen and Miao, Peng and Huang, Canhua and Wang, Hao and Jing, Jing},
+  journal={Biomaterials},
+  pages={123632},
+  year={2025},
+  publisher={Elsevier},
+  abstract={Cancer cells with stemness characteristics effectively escape the recognition and killing of immune-active cells, such as T cells, which has been considered as the root cause of cancer recurrence and metastasis. To sensitize cancer immunotherapy, we have developed salinomycin-repurposed endoplasmic reticulum (ER) stress nanoinducers (DTSS NPs) to synergistically suppress cancer cell stemness. Salinomycin, as a polyether antibiotic demonstrating robust cytotoxicity against tumor stem cell, is co-assembled with thymopentin (TP5) and ER-targeted phototherapeutic agent s-780, and tailored with DSPE-PEG-biotin to obtain DTSS NPs. This nanoplatform not only improves the bioavailability of TP5 and salinomycin, but also ensures controlled drug release and reduces the side effects of therapeutic agents. Moreover, the hyperpyrexia and ROS produced by s-780 further induced ER stress, which downregulates PD-L1 expression and activates the cGAS-STING pathway, while TP5 significantly promotes the proliferation and differentiation of T lymphocytes, resulting in the augment of the anti-tumor immunity. Importantly, salomycin synergistically boosted s-780-mediated ER stress to effectively inhibit the stemness of cancer cells, thereby enhancing the responsiveness of cancer cells to T cells. As expected, DTSS NPs activate systemic immunity and suppress cancer metastasis and recurrence, providing promising solutions for sensitizing cancer immunotherapy by inhibiting cancer cell stemness.},
+  doi={10.1016/j.biomaterials.2025.123632}
 }
 
-@article{RN6,
-   author = {Krizanova, O. and Babula, P. and Pacak, K.},
-   title = {Stress, catecholaminergic system and cancer},
-   journal = {Stress},
-   volume = {19},
-   number = {4},
-   pages = {419-28},
-   note = {1607-8888
-Krizanova, O
-Babula, P
-Pacak, K
-Journal Article
-Research Support, Non-U.S. Gov't
-Review
-England
-2016/07/12
-Stress. 2016 Jul;19(4):419-28. doi: 10.1080/10253890.2016.1203415. Epub 2016 Jul 11.},
-   abstract = {Stress as a modern civilization factor significantly affects our lives. While acute stress might have a positive effect on the organism, chronic stress is usually detrimental and might lead to serious health complications. It is known that stress induced by the physical environment (temperature-induced cold stress) can significantly impair the efficacy of cytotoxic chemotherapies and the anti-tumor immune response. On the other hand, epidemiological evidence has shown that patients taking drugs known as β-adrenergic antagonists ("β-blockers"), which are commonly prescribed to treat arrhythmia, hypertension, and anxiety, have significantly lower rates of several cancers. In this review, we summarize the current knowledge about catecholamines as important stress hormones in tumorigenesis and discuss the use of β-blockers as the potential therapeutic agents.},
-   keywords = {Animals
-Carcinogenesis/*metabolism
-Catecholamines/*metabolism
-Epinephrine/metabolism
-Humans
-Neoplasms/*etiology/metabolism
-Norepinephrine/metabolism
-Stress, Psychological/complications/*metabolism
-Adrenergic receptors
-catecholamines
-dopamine
-epinephrine
-norepinephrine
-stress
-tumor
-β-blockers},
-   ISSN = {1025-3890},
-   DOI = {10.1080/10253890.2016.1203415},
-   year = {2016},
-   type = {Journal Article}
+@article{chang2025oxidative,
+  image={/images/featuredImages/medcomm.webp}
+  title={Oxidative Stress in Antigen Processing and Presentation},
+  author={Chang, Qinxia and Zhang, Yaying and Liu, Xiaojun and Miao, Peng and Pu, Wenbing and Liu, Shanshan and Zhang, Jing and Tian, Yuan and Shen, Guobo and Xie, Na},
+  journal={MedComm-Oncology},
+  volume={4},
+  number={2},
+  pages={e70020},
+  year={2025},
+  publisher={Wiley Online Library},
+  abstract={Antigen processing and presentation are fundamental for connecting innate and adaptive immune responses in combating cancers and infections. Reactive oxygen species (ROS), serving as second messengers in various physiological processes, play a vital role in modulating antigen processing and presentation. However, oxidative stress due to an imbalance characterized by excessive accumulation of ROS or inadequate antioxidant defenses can severely impair antigen-specific immune responses, contributing to the pathophysiology of multiple health conditions, notably including various cancers, cancer-associated infections and autoimmune diseases. This review comprehensively investigates the multifaceted effects of ROS on antigen processing and presentation, encompassing immunopeptide generation, the functionality of antigen-presentation machinery (APM), and the interactions of antigen-presenting cells and antigen-specific effector cells. It emphasizes the critical pathophysiological roles of oxidative stress in diseases such as cancers, cancer-associated infections and autoimmune diseases. Moreover, we delve into the therapeutic potential of targeting redox homeostasis to enhance antitumor immune responses. By illuminating the intricate interplay between ROS and immune functionality, this review provides an essential theoretical framework for developing innovative immunotherapy strategies aimed at restoring immune competency and improving clinical outcomes in patients with immune-related diseases.},
+  doi={10.1002/mog2.70020}
 }
 
-@article{RN3,
-   author = {Renz, B. W. and Takahashi, R. and Tanaka, T. and Macchini, M. and Hayakawa, Y. and Dantes, Z. and Maurer, H. C. and Chen, X. and Jiang, Z. and Westphalen, C. B. and Ilmer, M. and Valenti, G. and Mohanta, S. K. and Habenicht, A. J. R. and Middelhoff, M. and Chu, T. and Nagar, K. and Tailor, Y. and Casadei, R. and Di Marco, M. and Kleespies, A. and Friedman, R. A. and Remotti, H. and Reichert, M. and Worthley, D. L. and Neumann, J. and Werner, J. and Iuga, A. C. and Olive, K. P. and Wang, T. C.},
-   title = {beta2 Adrenergic-Neurotrophin Feedforward Loop Promotes Pancreatic Cancer},
-   journal = {Cancer Cell},
-   volume = {33},
-   number = {1},
-   pages = {75-90 e7},
-   note = {Renz, Bernhard W
-Takahashi, Ryota
-Tanaka, Takayuki
-Macchini, Marina
-Hayakawa, Yoku
-Dantes, Zahra
-Maurer, H Carlo
-Chen, Xiaowei
-Jiang, Zhengyu
-Westphalen, C Benedikt
-Ilmer, Matthias
-Valenti, Giovanni
-Mohanta, Sarajo K
-Habenicht, Andreas J R
-Middelhoff, Moritz
-Chu, Timothy
-Nagar, Karan
-Tailor, Yagnesh
-Casadei, Riccardo
-Di Marco, Mariacristina
-Kleespies, Axel
-Friedman, Richard A
-Remotti, Helen
-Reichert, Maximilian
-Worthley, Daniel L
-Neumann, Jens
-Werner, Jens
-Iuga, Alina C
-Olive, Kenneth P
-Wang, Timothy C
-eng
-P30 CA013696/CA/NCI NIH HHS/
-R35 CA210088/CA/NCI NIH HHS/
-S10 RR025686/RR/NCRR NIH HHS/
-Research Support, N.I.H., Extramural
-Research Support, Non-U.S. Gov't
-2017/12/19
-Cancer Cell. 2018 Jan 8;33(1):75-90.e7. doi: 10.1016/j.ccell.2017.11.007. Epub 2017 Dec 14.},
-   abstract = {Catecholamines stimulate epithelial proliferation, but the role of sympathetic nerve signaling in pancreatic ductal adenocarcinoma (PDAC) is poorly understood. Catecholamines promoted ADRB2-dependent PDAC development, nerve growth factor (NGF) secretion, and pancreatic nerve density. Pancreatic Ngf overexpression accelerated tumor development in LSL-Kras(+/G12D);Pdx1-Cre (KC) mice. ADRB2 blockade together with gemcitabine reduced NGF expression and nerve density, and increased survival of LSL-Kras(+/G12D);LSL-Trp53(+/R172H);Pdx1-Cre (KPC) mice. Therapy with a Trk inhibitor together with gemcitabine also increased survival of KPC mice. Analysis of PDAC patient cohorts revealed a correlation between brain-derived neurotrophic factor (BDNF) expression, nerve density, and increased survival of patients on nonselective beta-blockers. These findings suggest that catecholamines drive a feedforward loop, whereby upregulation of neurotrophins increases sympathetic innervation and local norepinephrine accumulation.},
-   keywords = {Adrenergic Agents/pharmacology
-Animals
-Carcinoma in Situ/metabolism
-Catecholamines/*pharmacology
-Cell Line, Tumor
-Deoxycytidine/analogs & derivatives/pharmacology
-Mice, Transgenic
-Nerve Growth Factors/*metabolism
-Pancreatic Neoplasms/*drug therapy/pathology
-Gemcitabine
-Ngf-bdnf
-Trk
-adrenergic signaling
-neurotrophins
-pancreatic cancer
-stress
-beta-blockers},
-   ISSN = {1878-3686 (Electronic)
-1535-6108 (Print)
-1535-6108 (Linking)},
-   DOI = {10.1016/j.ccell.2017.11.007},
-   url = {https://www.ncbi.nlm.nih.gov/pubmed/29249692},
-   year = {2018},
-   type = {Journal Article}
+@article{zhang2023dysfunction,
+  image={/images/featuredImages/jad.png},
+  title={Dysfunction of GluN3A subunit is involved in depression-like behaviors through synaptic deficits},
+  author={Zhang, Mengmeng and Kong, Xiangru and Chen, Jing and Liu, Wenqin and Liu, Can and Dou, Xiaoyun and Jiang, Lin and Luo, Yanmin and Song, Mingrui and Miao, Peng and others},
+  journal={Journal of Affective Disorders},
+  volume={332},
+  pages={72--82},
+  year={2023},
+  publisher={Elsevier},
+  abstract={The N-methyl-D-aspartate receptor (NMDAR) plays a critical role in synaptic transmission and plasticity, and its dysregulation has been linked to depression. In this study, we explored the function of the inhibitory NMDAR subunit GluN3A in depression using chronic restraint stress (CRS) and GluN3A knockout (KO) mouse models. We found that hippocampal GluN3A expression was significantly decreased in CRS-induced depressive mice, and viral re-expression of GluN3A alleviated depression-like behaviors. Conversely, GluN3A deficiency induced anhedonia and behavioral despair, accompanied by downregulation of synapse- and axon-related genes and a reduction in the postsynaptic protein PSD95, as revealed by RNA-seq and molecular analyses. Importantly, PSD95 loss in CRS mice was rescued by viral-mediated GluN3A re-expression. These findings indicate that GluN3A dysfunction contributes to depressive phenotypes through synaptic deficits, providing new insights into inhibitory NMDAR signaling and potential therapeutic targets for depression.},
+  doi={10.1016/j.jad.2023.03.076}
 }
-
-@article{RN2,
-   author = {Schneider, K. M. and Blank, N. and Alvarez, Y. and Thum, K. and Lundgren, P. and Litichevskiy, L. and Sleeman, M. and Bahnsen, K. and Kim, J. and Kardo, S. and Patel, S. and Dohnalova, L. and Uhr, G. T. and Descamps, H. C. and Kircher, S. and McSween, A. M. and Ardabili, A. R. and Nemec, K. M. and Jimenez, M. T. and Glotfelty, L. G. and Eisenberg, J. D. and Furth, E. E. and Henao-Mejia, J. and Bennett, F. C. and Pierik, M. J. and Romberg-Camps, M. and Mujagic, Z. and Prinz, M. and Schneider, C. V. and Wherry, E. J. and Bewtra, M. and Heuckeroth, R. O. and Levy, M. and Thaiss, C. A.},
-   title = {The enteric nervous system relays psychological stress to intestinal inflammation},
-   journal = {Cell},
-   volume = {186},
-   number = {13},
-   pages = {2823-2838 e20},
-   note = {Schneider, Kai Markus
-Blank, Niklas
-Alvarez, Yelina
-Thum, Katharina
-Lundgren, Patrick
-Litichevskiy, Lev
-Sleeman, Madeleine
-Bahnsen, Klaas
-Kim, Jihee
-Kardo, Simon
-Patel, Shaan
-Dohnalova, Lenka
-Uhr, Giulia T
-Descamps, Helene C
-Kircher, Susanna
-McSween, Alana M
-Ardabili, Ashkan Rezazadeh
-Nemec, Kelsey M
-Jimenez, Monica T
-Glotfelty, Lila G
-Eisenberg, Joshua D
-Furth, Emma E
-Henao-Mejia, Jorge
-Bennett, F Chris
-Pierik, Marie J
-Romberg-Camps, Marielle
-Mujagic, Zlatan
-Prinz, Marco
-Schneider, Carolin V
-Wherry, E John
-Bewtra, Meenakshi
-Heuckeroth, Robert O
-Levy, Maayan
-Thaiss, Christoph A
-eng
-P01 CA210944/CA/NCI NIH HHS/
-R01 DK122798/DK/NIDDK NIH HHS/
-F31 HL160065/HL/NHLBI NIH HHS/
-R01 AI155577/AI/NIAID NIH HHS/
-DP2 AG067511/AG/NIA NIH HHS/
-U19 AI082630/AI/NIAID NIH HHS/
-P30 ES013508/ES/NIEHS NIH HHS/
-R01 AI115712/AI/NIAID NIH HHS/
-R01 DK129691/DK/NIDDK NIH HHS/
-R01 DK128282/DK/NIDDK NIH HHS/
-P30 DK019525/DK/NIDDK NIH HHS/
-DP2 AG067492/AG/NIA NIH HHS/
-T32 AI141393/AI/NIAID NIH HHS/
-P30 DK050306/DK/NIDDK NIH HHS/
-U19 AI117950/AI/NIAID NIH HHS/
-R21 NS116574/NS/NINDS NIH HHS/
-P01 AI108545/AI/NIAID NIH HHS/
-2023/05/27
-Cell. 2023 Jun 22;186(13):2823-2838.e20. doi: 10.1016/j.cell.2023.05.001. Epub 2023 May 25.},
-   abstract = {Mental health profoundly impacts inflammatory responses in the body. This is particularly apparent in inflammatory bowel disease (IBD), in which psychological stress is associated with exacerbated disease flares. Here, we discover a critical role for the enteric nervous system (ENS) in mediating the aggravating effect of chronic stress on intestinal inflammation. We find that chronically elevated levels of glucocorticoids drive the generation of an inflammatory subset of enteric glia that promotes monocyte- and TNF-mediated inflammation via CSF1. Additionally, glucocorticoids cause transcriptional immaturity in enteric neurons, acetylcholine deficiency, and dysmotility via TGF-beta2. We verify the connection between the psychological state, intestinal inflammation, and dysmotility in three cohorts of IBD patients. Together, these findings offer a mechanistic explanation for the impact of the brain on peripheral inflammation, define the ENS as a relay between psychological stress and gut inflammation, and suggest that stress management could serve as a valuable component of IBD care.},
-   keywords = {Humans
-Glucocorticoids/pharmacology
-Inflammation
-*Enteric Nervous System/physiology
-*Inflammatory Bowel Diseases
-Stress, Psychological
-Ibd
-enteric glia
-enteric nervous system
-enteric neurons
-glucocorticoids
-monocytes
-neuro-immune interactions
-psychological stress},
-   ISSN = {1097-4172 (Electronic)
-0092-8674 (Print)
-0092-8674 (Linking)},
-   DOI = {10.1016/j.cell.2023.05.001},
-   url = {https://www.ncbi.nlm.nih.gov/pubmed/37236193},
-   year = {2023},
-   type = {Journal Article}
-}
-
-@article{RN7,
-   author = {Szpunar, M. J. and Belcher, E. K. and Dawes, R. P. and Madden, K. S.},
-   title = {Sympathetic innervation, norepinephrine content, and norepinephrine turnover in orthotopic and spontaneous models of breast cancer},
-   journal = {Brain Behav Immun},
-   volume = {53},
-   pages = {223-233},
-   note = {Szpunar, Mercedes J
-Belcher, Elizabeth K
-Dawes, Ryan P
-Madden, Kelley S
-eng
-NIH T32GM07356/GM/NIGMS NIH HHS/
-R21 CA152777-01/CA/NCI NIH HHS/
-T32 NS007489/NS/NINDS NIH HHS/
-T32 GM007356/GM/NIGMS NIH HHS/
-NINDS T32 NS007489/NS/NINDS NIH HHS/
-TL1 RR024135/RR/NCRR NIH HHS/
-R21 CA152777/CA/NCI NIH HHS/
-Research Support, N.I.H., Extramural
-Research Support, Non-U.S. Gov't
-Research Support, U.S. Gov't, Non-P.H.S.
-Netherlands
-2016/01/01
-Brain Behav Immun. 2016 Mar;53:223-233. doi: 10.1016/j.bbi.2015.12.014. Epub 2015 Dec 21.},
-   abstract = {Activation of the sympathetic nervous system (SNS) drives breast cancer progression in preclinical breast cancer models, but it has yet to be established if neoplastic and stromal cells residing in the tumor are directly targeted by locally released norepinephrine (NE). In murine orthotopic and spontaneous mammary tumors, tyrosine hydroxylase (TH)+ sympathetic nerves were limited to the periphery of the tumor. No TH+ staining was detected deeper within these tumors, even in regions with a high density of blood vessels. NE concentration was much lower in tumors compared to the more densely innervated spleen, reflecting the relative paucity of tumor TH+ innervation. Tumor and spleen NE concentration decreased with increased tissue mass. In mice treated with the neurotoxin 6-hydroxydopamine (6-OHDA) to selectively destroy sympathetic nerves, tumor NE concentration was reduced approximately 50%, suggesting that the majority of tumor NE is derived from local sympathetic nerves. To evaluate NE utilization, NE turnover in orthotopic 4T1 mammary tumors was compared to spleen under baseline and stress conditions. In non-stressed mice, NE turnover was equivalent between tumor and spleen. In mice exposed to a stressor, tumor NE turnover was increased compared to spleen NE turnover, and compared to non-stressed tumor NE turnover. Together, these results demonstrate that NE in mammary tumors is derived from local sympathetic nerves that synthesize and metabolize NE. However, differences between spleen and tumor NE turnover with stressor exposure suggest that sympathetic NE release is regulated differently within the tumor microenvironment compared to the spleen. Local mammary tumor sympathetic innervation, despite its limited distribution, is responsive to stressor exposure and therefore can contribute to stress-induced tumor progression.},
-   keywords = {Animals
-Cell Line, Tumor
-Female
-Heterografts
-Humans
-Mammary Glands, Animal/*innervation
-Mammary Neoplasms, Experimental/*metabolism
-Mice
-Mice, Inbred BALB C
-Mice, Inbred NOD
-Mice, SCID
-Norepinephrine/*metabolism
-Oxidopamine/pharmacology
-Spleen/metabolism
-Sympathetic Nervous System/drug effects/*metabolism
-Tyrosine 3-Monooxygenase/metabolism
-Breast cancer
-Chemical sympathectomy
-Norepinephrine
-Norepinephrine turnover
-Sympathetic nervous system},
-   ISSN = {1090-2139 (Electronic)
-0889-1591 (Print)
-0889-1591 (Linking)},
-   DOI = {10.1016/j.bbi.2015.12.014},
-   url = {https://www.ncbi.nlm.nih.gov/pubmed/26718447},
-   year = {2016},
-   type = {Journal Article}
-}
-
-@article{RN5,
-   author = {Tritos, N. A. and Miller, K. K.},
-   title = {Diagnosis and Management of Pituitary Adenomas: A Review},
-   journal = {Jama},
-   volume = {329},
-   number = {16},
-   pages = {1386-1398},
-   note = {1538-3598
-Tritos, Nicholas A
-Miller, Karen K
-Journal Article
-Review
-United States
-2023/04/25
-JAMA. 2023 Apr 25;329(16):1386-1398. doi: 10.1001/jama.2023.5444.},
-   abstract = {IMPORTANCE: Pituitary adenomas are neoplasms of the pituitary adenohypophyseal cell lineage and include functioning tumors, characterized by the secretion of pituitary hormones, and nonfunctioning tumors. Clinically evident pituitary adenomas occur in approximately 1 in 1100 persons. OBSERVATIONS: Pituitary adenomas are classified as either macroadenomas (≥10 mm) (48% of tumors) or microadenomas (<10 mm). Macroadenomas may cause mass effect, such as visual field defects, headache, and/or hypopituitarism, which occur in about 18% to 78%, 17% to 75%, and 34% to 89% of patients, respectively. Thirty percent of pituitary adenomas are nonfunctioning adenomas, which do not produce hormones. Functioning tumors are those that produce an excess of normally produced hormones and include prolactinomas, somatotropinomas, corticotropinomas, and thyrotropinomas, which produce prolactin, growth hormone, corticotropin, and thyrotropin, respectively. Approximately 53% of pituitary adenomas are prolactinomas, which can cause hypogonadism, infertility, and/or galactorrhea. Twelve percent are somatotropinomas, which cause acromegaly in adults and gigantism in children, and 4% are corticotropinomas, which secrete corticotropin autonomously, resulting in hypercortisolemia and Cushing disease. All patients with pituitary tumors require endocrine evaluation for hormone hypersecretion. Patients with macroadenomas additionally require evaluation for hypopituitarism, and patients with tumors compressing the optic chiasm should be referred to an ophthalmologist for formal visual field testing. For those requiring treatment, first-line therapy is usually transsphenoidal pituitary surgery, except for prolactinomas, for which medical therapy, either bromocriptine or cabergoline, is usually first line. CONCLUSIONS AND RELEVANCE: Clinically manifest pituitary adenomas affect approximately 1 in 1100 people and can be complicated by syndromes of hormone excess as well as visual field defects and hypopituitarism from mass effect in larger tumors. First-line therapy for prolactinomas consists of bromocriptine or cabergoline, and transsphenoidal pituitary surgery is first-line therapy for other pituitary adenomas requiring treatment.},
-   keywords = {Adult
-Child
-Female
-Humans
-Pregnancy
-*Adenoma/complications/diagnosis/metabolism/therapy
-Adrenocorticotropic Hormone/biosynthesis
-Bromocriptine/therapeutic use
-Cabergoline/therapeutic use
-Human Growth Hormone/biosynthesis
-Hypopituitarism/diagnosis/etiology/metabolism/therapy
-*Pituitary Neoplasms/complications/diagnosis/metabolism/therapy
-Prolactinoma/diagnosis/etiology/metabolism/therapy},
-   ISSN = {0098-7484},
-   DOI = {10.1001/jama.2023.5444},
-   year = {2023},
-   type = {Journal Article}
-}
-
